Fixing GC settings + many more small adjustments.